--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <p>Hello World</p>
     <img src="img/grumpy.jpg" alt="grumpy cat">
+    <a href="http://krapt.com.ua/kontakty"> KRAPT</a>
 </body>
 </html>
