--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <p>Hello World</p>
     <img src="img/grumpy.jpg" alt="grumpy cat">
     <a href="http://krapt.com.ua/kontakty"> KRAPT</a>
+    <a href="form.html">Form</a>
 </body>
 </html>
